--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,7 +7,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  % background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
 }
@@ -15,4 +15,79 @@ body {
 img {
   display: block;
   max-width: 100%;
+
+}
+
+.body_index {
+  background: url(../image/fon1.jpg) center / cover no-repeat;
+  ;
+  min-height: 100vh;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  width: 200px;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 10px;
+  border: solid #996600;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: black;
+  display: inline-flex;
+  flex-direction: column;
+  text-decoration: none;
+  text-align: center;
+}
+
+a:hover {
+  border: solid #e6e6e6;
+  background-color: #996600;
+  color: white;
+}
+
+.btn {
+  display: inline-flex;
+  margin: 10px;
+  text-decoration: none;
+  border: 2px solid #BFE2FF;
+  position: relative;
+  overflow: hidden;
+  font-size: 20px;
+  line-height: 20px;
+  padding: 12px 30px;
+  color: #FFF;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed', Тahoma, sans-serif;
+  background: #337AB7;
+  transition: box-shadow 0.3s, transform 0.3s;
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:active,
+.btn:focus {
+  transform: translateY(-4px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2), 0 16px 20px rgba(0, 0, 0, 0.2);
+  color: #FFF;
+}
+
+.btn:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(-45deg, transparent, rgba(191, 226, 255, 0.3), transparent);
+  transition: left 0.7s;
+}
+
+.btn:hover:before,
+.btn:active:before,
+.btn:focus:before {
+  left: 100%;
 }
