--- a/src/css/common.css
+++ b/src/css/common.css
@@ -91,3 +91,143 @@ a:hover {
 .btn:focus:before {
   left: 100%;
 }
+
+/*---------------------------*/
+
+.timer {
+  display: flex;
+  margin-top: 10px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+}
+
+.value {
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 4px;
+  color: #f1ebe5;
+  text-shadow: 0 6px 8px #c4b59d, 0px -3px 1px #fff;
+}
+
+.label {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #f1ebe5;
+  text-shadow: 0px 4px 4px #c4b59d, 0 -2px 1px #fff;
+}
+
+.flatpickr-months {
+  background-color: antiquewhite;
+}
+
+span.flatpickr-day.selected,
+span.flatpickr-day.selected:hover {
+  background-color: #ff0505;
+  border-color: #ff0505;
+  color: #ffffff;
+}
+
+.flatpickr-day.today.selected {
+  background: antiquewhite;
+  border-color: #ff0505;
+  color: #ab803c;
+}
+
+.flatpickr-time input.flatpickr-hour.selected,
+.flatpickr-time input.flatpickr-hour,
+.flatpickr-time input.flatpickr-minute,
+.flatpickr-time input.flatpickr-second {
+  font-weight: 400;
+  color: #ff0505;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin: 50px;
+}
+
+label {
+  margin-right: 20px;
+}
+
+label span {
+  color: #f7eff4;
+  text-transform: uppercase;
+  text-shadow: 1.1px 1px 0px #c2a8cd, -1.1px -1px 0px #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+input[type='number'] {
+  margin-left: 10px;
+  padding: 10px;
+  width: 220px;
+  height: 40px;
+
+  border: 0;
+  outline: 0;
+  border-radius: 5px;
+
+  background-color: transparent;
+  color: #ff0505;
+  box-shadow: 1px 1px 0px #c2a8cd, -1px -1px 0px #ffffff;
+  filter: drop-shadow(0px 1px 1px rgb(247, 216, 236));
+  -webkit-filter: drop-shadow(0px 1px 1px rgb(247, 216, 236));
+
+  font-size: 16px;
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+input[type='number']::placeholder {
+  color: #e2c8f5;
+}
+
+input[type='number']:focus {
+  box-shadow: inset 1px 1px 2px #fff, inset -1px -1px 2px #e7d1f2;
+}
+
+.main-item {
+  margin-bottom: 50px;
+}
+
+.main-link {
+  margin-bottom: 20px;
+  text-decoration: none;
+
+  max-width: 150px;
+  padding: 8px 12px;
+
+  border: 0;
+  outline: 0;
+  border-radius: 320px;
+
+  background-color: #ebecf0;
+  text-shadow: 1px 1px 0 #fff;
+
+  font-size: 16px;
+  font: inherit;
+  font-weight: bold;
+
+  color: #61677c;
+  box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.main-link:hover {
+  box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
+}
+
+.main-link:active {
+  box-shadow: inset 1px 1px 2px #babecc, inset -1px -1px 2px #fff;
+}
