--- a/src/css/common.css
+++ b/src/css/common.css
@@ -240,3 +240,44 @@ button[type='submit']:active {
   -webkit-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
   box-shadow: inset 4.3px 4.3px 7px rgb(183, 177, 181);
 }
+
+/*------------------------3------------*/
+label {
+  margin-right: 20px;
+}
+
+label span {
+  color: #f7eff4;
+  text-transform: uppercase;
+  text-shadow: 1.1px 1px 0px #c2a8cd, -1.1px -1px 0px #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+input[type='number'] {
+  margin-left: 10px;
+  padding: 10px;
+  width: 220px;
+  height: 40px;
+
+  border: 0;
+  outline: 0;
+  border-radius: 5px;
+
+  background-color: transparent;
+  color: rgb(125, 95, 49)6);
+  box-shadow: 1px 1px 0px #c2a8cd, -1px -1px 0px #ffffff;
+  filter: drop-shadow(0px 1px 1px rgb(247, 216, 236));
+  -webkit-filter: drop-shadow(0px 1px 1px rgb(247, 216, 236));
+
+  font-size: 16px;
+  transition: box-shadow 0.2s ease-in-out;
+}
+
+input[type='number']::placeholder {
+  color: #e2c8f5;
+}
+
+input[type='number']:focus {
+  box-shadow: inset 1px 1px 2px #fff, inset -1px -1px 2px #e7d1f2;
+}
