--- a/src/css/common.css
+++ b/src/css/common.css
@@ -217,67 +217,69 @@ label span {
   top: 3px;
 }
 
-button[type='submit'] {
-  width: 88px;
-  height: 44px;
-  border-radius: 34px;
-  background-color: #f7eff4;
+/*------------------------3------------*/
+button[type='submit'],
+a.link-promis {
+  width: 120px;
+  height: 60px;
+  border-radius: 20px;
+  background-color: #ebe0e6;
   filter: drop-shadow(3.4px 3.4px 3.4px rgb(183, 177, 181)) drop-shadow(-3.4px -3.4px 3.4px white);
   -webkit-filter: drop-shadow(3.4px 3.4px 3.4px rgb(183, 177, 181)) drop-shadow(-3.4px -3.4px 3.4px white);
   box-shadow: inset 4.3px 4.3px 7px #fff;
-  color: #a09686;
+  color: #3e2a09;
   text-shadow: 1px 1.6px 1px #fff;
 }
 
-button[type='submit']:hover {
-  filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
-  -webkit-filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
-  box-shadow: inset 2.5px 2.5px 2.5px #fff;
+button[type='submit']:hover,
+{
+filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
+-webkit-filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
+box-shadow: inset 2.5px 2.5px 2.5px #fff;
 }
 
-button[type='submit']:active {
-  filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
-  -webkit-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
-  box-shadow: inset 4.3px 4.3px 7px rgb(183, 177, 181);
+button[type='submit']:active,
+{
+filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
+-webkit-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
+box-shadow: inset 4.3px 4.3px 7px rgb(183, 177, 181);
 }
 
-/*------------------------3------------*/
+
 label {
   margin-right: 20px;
 }
 
 label span {
-  color: #f7eff4;
+  color: #533e4d;
   text-transform: uppercase;
   text-shadow: 1.1px 1px 0px #c2a8cd, -1.1px -1px 0px #ffffff;
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 20px;
 }
 
-input[type='number'] {
+input[type='number'],
+a.link-promis {
   margin-left: 10px;
   padding: 10px;
   width: 220px;
-  height: 40px;
-
-  border: 0;
+  height: 60px;
+  border: 1px;
   outline: 0;
-  border-radius: 5px;
-
+  border-radius: 10px;
   background-color: transparent;
-  color: rgb(125, 95, 49)6);
+  color: rgb(125, 95, 49);
   box-shadow: 1px 1px 0px #c2a8cd, -1px -1px 0px #ffffff;
   filter: drop-shadow(0px 1px 1px rgb(247, 216, 236));
   -webkit-filter: drop-shadow(0px 1px 1px rgb(247, 216, 236));
-
   font-size: 16px;
   transition: box-shadow 0.2s ease-in-out;
 }
 
 input[type='number']::placeholder {
-  color: #e2c8f5;
+  color: #d3ccd8;
 }
 
-input[type='number']:focus {
-  box-shadow: inset 1px 1px 2px #fff, inset -1px -1px 2px #e7d1f2;
+input[type='number']:focus,
+{
+box-shadow: inset 1px 1px 2px #fff, inset -1px -1px 2px #d3ccd8;
 }
