--- a/src/css/common.css
+++ b/src/css/common.css
@@ -231,11 +231,10 @@ a.link-promis {
   text-shadow: 1px 1.6px 1px #fff;
 }
 
-button[type='submit']:hover,
-{
-filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
--webkit-filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
-box-shadow: inset 2.5px 2.5px 2.5px #fff;
+button[type='submit']:hover {
+  filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
+  -webkit-filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
+  box-shadow: inset 2.5px 2.5px 2.5px #fff;
 }
 
 button[type='submit']:active,
