--- a/src/css/common.css
+++ b/src/css/common.css
@@ -237,11 +237,10 @@ button[type='submit']:hover {
   box-shadow: inset 2.5px 2.5px 2.5px #fff;
 }
 
-button[type='submit']:active,
-{
-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
--webkit-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
-box-shadow: inset 4.3px 4.3px 7px rgb(183, 177, 181);
+button[type='submit']:active {
+  filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
+  -webkit-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
+  box-shadow: inset 4.3px 4.3px 7px rgb(183, 177, 181);
 }
 
 
