--- a/src/css/common.css
+++ b/src/css/common.css
@@ -231,13 +231,15 @@ a.link-promis {
   text-shadow: 1px 1.6px 1px #fff;
 }
 
-button[type='submit']:hover {
+button[type='submit']:hover,
+a.link-promis:hover {
   filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
   -webkit-filter: drop-shadow(5px 5px 3.4px rgb(183, 177, 181));
   box-shadow: inset 2.5px 2.5px 2.5px #fff;
 }
 
-button[type='submit']:active {
+button[type='submit']:active,
+a.link-promis:active {
   filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
   -webkit-filter: drop-shadow(0px 0px 0px rgb(183, 177, 181));
   box-shadow: inset 4.3px 4.3px 7px rgb(183, 177, 181);
@@ -255,8 +257,7 @@ label span {
   font-size: 20px;
 }
 
-input[type='number'],
-a.link-promis {
+input[type='number'] {
   margin-left: 10px;
   padding: 10px;
   width: 220px;
@@ -277,7 +278,6 @@ input[type='number']::placeholder {
   color: #d3ccd8;
 }
 
-input[type='number']:focus,
-{
-box-shadow: inset 1px 1px 2px #fff, inset -1px -1px 2px #d3ccd8;
+input[type='number']:focus {
+  box-shadow: inset 1px 1px 2px #fff, inset -1px -1px 2px #d3ccd8;
 }
